<resources>
    <string name="app_name">DJ Roomba</string>
    <string name="please_wait">Please wait</string>
    <string name="search">Search</string>
    <string name="path_search">search path</string>
    <string name="cancel">CANCEL</string>
    <string name="submit">SUBMIT</string>
    <string name="describe_music">You could describe th kind of music you are looking for</string>
    <string name="title">Description (Optional)</string>
    <string name="password_protected">Password Protected</string>
    <string name="party_name">Party Name</string>
    <string name="track_label">Track :  </string>
    <string name="artist_label">Artist :  </string>
    <string name="add">Add</string>
    <string name="join">JOIN</string>
    <string name="party_name_empty">Party name cannot be empty</string>
    <string name="loading_playlist">Loading your playlist</string>
    <string name="now_playing">Now Playing : </string>
    <string name="song_name">\u0020%1$s</string>
</resources>
