<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout android:id="@+id/partyListLayout"
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <include
        android:id="@+id/searchToolbar"
        layout="@layout/toolbar_search" />

    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_alpha_30"
        android:clickable="true"
        android:visibility="gone" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="30dp"
        android:src="@android:drawable/ic_menu_add"
        app:backgroundTint="@color/accent"
        app:borderWidth="0dp" />

    <!-- wrap transform view in Circular reveal container -->
    <io.codetail.widget.RevealFrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="30dp"

        android:clickable="false">

        <android.support.v7.widget.CardView
            android:id="@+id/sheet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/party_name"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

                <EditText
                    android:id="@+id/partyNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/party_name"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/accent"
                    android:textSize="20sp"
                    tools:text="PARTAAAAYYY!" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/passwordCheckBox"
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:backgroundTint="@color/accent"
                        android:buttonTint="@color/accent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:layout_gravity="center"
                        android:text="@string/password_protected"
                        android:textColor="@color/black"
                        android:textSize="17sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="5dp"
                        android:padding="10dp"
                        android:text="@string/title"
                        android:textColor="@color/black"
                        android:textSize="17sp" />

                    <EditText
                        android:id="@+id/partyDescriptionEditText"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/border"
                        android:gravity="top"
                        android:hint="@string/describe_music"
                        android:padding="5dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/accent"
                        android:textSize="17sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <Button
                        android:id="@+id/cancelButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10sp"
                        android:layout_weight="1"
                        android:text="@string/cancel" />

                    <Button
                        android:id="@+id/submitButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:text="@string/submit" />

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </io.codetail.widget.RevealFrameLayout>

</RelativeLayout>